Always show scrollbar to prevent page from moving.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,7 @@
+html {
+    overflow-y: scroll;
+}
+
 html, body {
     margin-top: 1.5%;
     margin-left: 3%;
